create autj middleware and update router and documentation
