# internal/db/sqlc/models.go
@@ -38,6 +38,17 @@ type PostsTag struct {
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
+type Session struct {
+	ID           uuid.UUID `json:"id"`
+	Username     string    `json:"username"`
+	RefreshToken string    `json:"refresh_token"`
+	UserAgent    string    `json:"user_agent"`
+	ClientIp     string    `json:"client_ip"`
+	IsBlocked    bool      `json:"is_blocked"`
+	ExpiresAt    time.Time `json:"expires_at"`
+	CreatedAt    time.Time `json:"created_at"`
+}
+
 type Tag struct {
 	ID        uuid.UUID `json:"id"`
 	Name      string    `json:"name"`
